# peer-to-peer-chat

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
include/peerchat/: app.hpp  cli.hpp  client.hpp  connection.hpp  framing.hpp  git_version.hpp.in  identity.hpp  message.hpp  peer_manager.hpp  server.hpp  types.hpp  updater.hpp  version.hpp
packaging/aur/: PKGBUILD
packaging/homebrew/: peerchat.rb
packaging/macos/: build-pkg.sh
packaging/windows/: installer.nsi
src/: app.cpp  cli.cpp  client.cpp  connection.cpp  framing.cpp  identity.cpp  main.cpp  message.cpp  peer_manager.cpp  server.cpp  updater.cpp  version.cpp
tests/: test_connection.cpp  test_framing.cpp  test_identity.cpp  test_message.cpp  test_version.cpp
